--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,37 +1,12 @@
-<%= form_for(@event) do |f| %>
-  <% if @event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
-
-      <ul>
-      <% @event.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :event_date %><br />
-    <%= f.date_select :event_date %>
-  </div>
-  <div class="field">
-    <%= f.label :start_time %><br />
-    <%= f.time_select :start_time %>
-  </div>
-  <div class="field">
-    <%= f.label :end_time %><br />
-    <%= f.time_select :end_time %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= semantic_form_for @event do |f| %>
+  	<%= f.inputs do %>
+  		<%= f.input :title %>
+  		<%= f.input :description, :as => :text %>
+  		<%= f.input :event_date %>
+  		<%= f.input :start_time %>
+  		<%= f.input :end_time %>
+  		<%= f.hidden_field :locale , :value => I18n.locale %>
+  	<% end %>
+	<%= f.actions :submit, :cancel %>
 <% end %>
+
