--- a/app/views/german_week/index.html.erb
+++ b/app/views/german_week/index.html.erb
@@ -1,2 +1,5 @@
-<h1>GermanWeek#index</h1>
-<p>Find me in app/views/german_week/index.html.erb</p>
+<% title 'German Week' %>
+
+<%= link_to 'Sponsors', sponsors_path %>
+
+<%= link_to 'Events', events_path %>
