--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GermanWeek</title>
+  <title>Deutschen Woche 2012 - <%= yield (:title) || "German Week" %></title>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class="main">
+	<h2><%= yield(:title) %></h2>
+
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
+
+  <%= yield %>
+</div>
 
 </body>
 </html>
