--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,18 @@
 <body>
 
 <div class="main">
+	<div id="user_nav">  
+	  <% if user_signed_in? %>  
+	    Signed in as <%= current_user.email %>. Not you?  
+	    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>  
+	  <% else %>  
+	    <%= link_to "Sign up", new_user_registration_path %> or  
+	    <%= link_to "Sign in", new_user_session_path %>  
+	  <% end %>  
+	</div>  
+
 	<h2><%= yield(:title) %></h2>
+
 
 	<p class="notice"><%= notice %></p>
 	<p class="alert"><%= alert %></p>
