--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,12 +17,12 @@
 
 <p>
   <b>Start time:</b>
-  <%= @event.start_time %>
+  <%= format_time(@event.start_time) %>
 </p>
 
 <p>
   <b>End time:</b>
-  <%= @event.end_time %>
+  <%= format_time(@event.end_time) %>
 </p>
 
 
