--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= semantic_form_for @tag do |f| %>
+<%= semantic_form_for @category do |f| %>
   	<%= f.inputs do %>
   		<%= f.input :title %>
   		<%= f.hidden_field :locale , :value => I18n.locale %>
