--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,8 +17,8 @@
     <td><%= event.title %></td>
     <td><%= event.description %></td>
     <td><%= event.event_date %></td>
-    <td><%= event.start_time %></td>
-    <td><%= event.end_time %></td>
+    <td><%= format_time(event.start_time) %></td>
+    <td><%= format_time(event.end_time) %></td>
     <td><%= link_to 'Show', event %></td>
     <td><%= link_to 'Edit', edit_event_path(event) %></td>
     <td><%= link_to 'Destroy', event, :confirm => 'Are you sure?', :method => :delete %></td>
