Added basic multilingual controller, views switcher, and routing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,16 @@
 	  <% end %>  
 	</div>  
 
+  <div id="language-form">
+    <ul>
+    <% @locales.each do |locale| %>
+      <% unless locale.language.to_s == I18n.locale.to_s %> 
+        <li><%= link_to locale.name, url_for(locale: locale.language), action: :set_locale %></li>
+      <% end %>
+    <% end %>
+    </ul>
+  </div>
+
 	<h2><%= yield(:title) %></h2>
 
 
