- switched to mysql2 gem for better utf-8 support - RUN BUNDLE INSTALL TO GET NEW GEM - added datetime js calendar for events that includes js to make sure end is after start - updated category, event and sponsor forms to use a multi-language form tabs so all language fields can be edited on one screen (copy with changes from mapspot) - updated events table to have start and end fields instead of event_date, start_time, end_time - added default locale values for de and en

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,8 +1,15 @@
 <%= semantic_form_for @category do |f| %>
-  	<%= f.inputs do %>
-  		<%= f.input :title %>
-  		<%= f.hidden_field :locale , :value => I18n.locale %>
-  	<% end %>
+	<%= f.semantic_errors %>
+	<%= f.inputs :for => :category_translations do |category_translation, i| %>
+		
+		<% I18n.locale = @locales[i-1].language %>
+		
+		<div id="form-<%= I18n.locale %>" class="multilanguage" style="<%= 'display:none;' if I18n.locale.to_s != params[:locale] %>">
+			<%= category_translation.input :title %>
+			<%= category_translation.hidden_field :locale , :value => I18n.locale %>
+		</div>
+
+  <% end %>
+  	
 	<%= f.actions :submit, :cancel %>
 <% end %>
-
