--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,6 @@
 <% title 'Editing event' %>
 
-<%= render 'form' %>
+<%= multi_language_form 'form' %>
 
 <%= link_to 'Show', @event %> |
 <%= link_to 'Back', events_path %>
