--- a/app/views/sponsors/edit.html.erb
+++ b/app/views/sponsors/edit.html.erb
@@ -1,6 +1,6 @@
 <% title 'Editing sponsor' %>
 
-<%= render 'form' %>
+<%= multi_language_form 'form' %>
 
 <%= link_to 'Show', @sponsor %> |
 <%= link_to 'Back', sponsors_path %>
