--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,6 @@
 <% title 'Editing category' %>
 
-<%= render 'form' %>
+<%= multi_language_form 'form' %>
 
 <%= link_to 'Show', @category %> |
 <%= link_to 'Back', categories_path %>
