--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,14 +1,24 @@
 <%= semantic_form_for @event do |f| %>
-  	<%= f.inputs do %>
-  		<%= f.input :title %>
-  		<%= f.input :description, :as => :text %>
-  		<%= f.input :event_date %>
-  		<%= f.input :start_time %>
-  		<%= f.input :end_time %>
+	<%= f.semantic_errors %>
+	<%= f.inputs :for => :event_translations do |event_translation, i| %>
+		
+		<% I18n.locale = @locales[i-1].language %>
+		
+		<div id="form-<%= I18n.locale %>" class="multilanguage" style="<%= 'display:none;' if I18n.locale.to_s != params[:locale] %>">
+			<%= event_translation.input :title %>
+			<%= event_translation.input :description, :as => :text %>
+			<%= event_translation.hidden_field :locale , :value => I18n.locale %>
+		</div>
+
+  <% end %>
+  	
+	<%= f.inputs do %>
+  		<%= f.input :start, :as => :time_picker %>
+  		<%= f.input :end, :as => :time_picker %>
   		<%= f.input :sponsors %>
   		<%= f.input :categories %>
-  		<%= f.hidden_field :locale , :value => I18n.locale %>
-  	<% end %>
+  <% end %>
+
 	<%= f.actions :submit, :cancel %>
 <% end %>
 
