--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,9 +4,8 @@
   <tr>
     <th>Title</th>
     <th>Description</th>
-    <th>Event date</th>
-    <th>Start time</th>
-    <th>End time</th>
+    <th>Start</th>
+    <th>End</th>
     <th></th>
     <th></th>
     <th></th>
@@ -16,9 +15,8 @@
   <tr>
     <td><%= event.title %></td>
     <td><%= event.description %></td>
-    <td><%= event.event_date %></td>
-    <td><%= format_time(event.start_time) %></td>
-    <td><%= format_time(event.end_time) %></td>
+    <td><%= format_datetime(event.start) %></td>
+    <td><%= format_datetime(event.end) %></td>
     <td><%= link_to 'Show', event %></td>
     <td><%= link_to 'Edit', edit_event_path(event) %></td>
     <td><%= link_to 'Destroy', event, :confirm => 'Are you sure?', :method => :delete %></td>
