- created default de/en/ka locale files - had to update psych gem to properly parse psych files - made en as the default fallback language - added the event day menu, does not do anything yet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,15 @@
     <% end %>
     </ul>
   </div>
+  
+  <div id="event_menu">
+  	<ul>
+  		<% (1..6).each do |i| %>
+  			<li><%= link_to "#{i+13} #{t('date.day_names').to_a[i]}", "#" %></li>
+  		<% end %>
+  	</ul>
+    <br class="clear"/>
+  </div>
 
 	<h2><%= yield(:title) %></h2>
 
