--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -14,7 +14,7 @@
 <% @events.each do |event| %>
   <tr>
     <td><%= event.title %></td>
-    <td><%= event.description %></td>
+    <td><%= truncate(event.description, :length => 100) %></td>
     <td><%= format_datetime(event.start) %></td>
     <td><%= format_datetime(event.end) %></td>
     <td><%= link_to 'Show', event %></td>
