--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,12 +40,7 @@
   </div>
   
   <div id="event_menu">
-  	<ul>
-  		<% (1..6).each do |i| %>
-  			<li><%= link_to "#{i+13} #{t('date.day_names').to_a[i]}", events_day_path(:date => "2012-05-#{i+13}") %></li>
-  		<% end %>
-  	</ul>
-    <br class="clear"/>
+		<%= render "shared/menu" %>
   </div>
 
 	<h2><%= yield(:title) %></h2>
