--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -2,14 +2,14 @@
 	<%= f.semantic_errors %>
 	<%= f.inputs :for => :category_translations do |category_translation, i| %>
 		
-		<% I18n.locale = @locales[i-1].language %>
+		<% formLocale = @locales[i-1].language %>
 		
-		<div id="form-<%= I18n.locale %>" class="multilanguage" style="<%= 'display:none;' if I18n.locale.to_s != params[:locale] %>">
+		<div id="form-<%= formLocale %>" class="multilanguage" style="<%= 'display:none;' if formLocale.to_s != params[:locale] %>">
 			<%= category_translation.input :title %>
-			<%= category_translation.hidden_field :locale , :value => I18n.locale %>
+			<%= category_translation.hidden_field :locale , :value => formLocale %>
 		</div>
 
   <% end %>
   	
-	<%= f.actions :submit, :cancel %>
+	<%= f.actions :submit, :reset, :cancel %>
 <% end %>
