- added leaflet maps - added gon gem so can read rails variables in js - added default gon variables to application controller - js to load map is in assets/js/map.js - added map to sponsor and event show page - added long and lat fields to sponsor and event tables and forms

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,10 +13,12 @@
   <% end %>
   	
 	<%= f.inputs do %>
-  		<%= f.input :start, :as => :time_picker %>
-  		<%= f.input :end, :as => :time_picker %>
-  		<%= f.input :sponsors %>
-  		<%= f.input :categories %>
+		<%= f.input :start, :as => :time_picker %>
+		<%= f.input :end, :as => :time_picker %>
+		<%= f.input :lat %>
+		<%= f.input :lon %>
+		<%= f.input :sponsors %>
+		<%= f.input :categories %>
   <% end %>
 
 	<%= f.actions :submit, :reset, :cancel %>
