--- a/app/views/sponsors/show.html.erb
+++ b/app/views/sponsors/show.html.erb
@@ -30,6 +30,8 @@
   <%= @sponsor.address %>
 </p>
 
+<div id='map'></div>
+
 
 <%= link_to 'Edit', edit_sponsor_path(@sponsor) %> |
 <%= link_to 'Back', sponsors_path %>
