- added events/category page to show all events for a category - updated menu so categories that are assigned to event are also listed and link to the events/category page - moved the map css from application to new map.css file

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -12,6 +12,10 @@ div.event_menu_popup ul li.event_menu_popup_item {
 	border-bottom: 1px dashed #666;
 }
 
+div.event_menu_popup ul li.event_menu_popup_item p.event_menu_popup_item_categories {
+	font-size: smaller;
+}
+
 .clearfix:after {
     content: ".";
     display: block;
