- updated map script so map div does not show if the event/sponsor does not have lat/lon - added will paginate to search   NOTE: currently not working with text search due to uniq attribute - added search form to layout

--- a/app/views/events/category.html.erb
+++ b/app/views/events/category.html.erb
@@ -9,9 +9,10 @@
 <% end %>
 
 
-<% if @events.length == 0 %>
-	<p>No events exist for this category.
-
+<% if @events.nil? || @events.length == 0 %>
+	<% if !params[:cat].nil? %>
+		<p>No events exist for this category.</p>
+	<% end %>
 <% else %>
 
 	<table>
