--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
 		
 		<%= link_to 'Event Categories', categories_path %>
 
+		<%= link_to 'Search', search_path %>
+
 	</div>
 
   <div id="language-form">
