--- a/app/views/german_week/search.html.erb
+++ b/app/views/german_week/search.html.erb
@@ -3,6 +3,7 @@
 <%= form_tag search_path, :method => 'get' do %>
   <p>
     <%= text_field_tag :search, params[:search] %>
+    <%= select_tag :search_in, options_for_select([['all','all']] + @categories.map {|c| [c.title, c.id]}, params[:search_in]) %>
     <%= submit_tag "Search", :name => nil %>
   </p>
 <% end %>
