--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	</div>  
 	<div>
 		<%= link_to 'Sponsors', sponsors_path %>
-		
+		<%= events_path %>
 		<%= link_to 'Events', events_path %>
 		
 		<%= link_to 'Event Categories', categories_path %>
