--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
 </head>
 <body>
 
+<div id="search_button_and_form">
+  <div id="search_form_container">
+    <%= render 'german_week/search' %>
+  </div>
+  <div id="search_show_button">
+    search
+  </div>
+</div>
+
 <div class="main">
 	<div id="user_nav">  
 	  <% if user_signed_in? %>  
