--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -31,3 +31,22 @@ div.event_menu_popup ul li.event_menu_popup_item p.event_menu_popup_item_categor
 .clearfix {
 	zoom: 1;
 }
+
+#search_button_and_form {
+	position: absolute;
+	top: 0px;
+	right: 15px;
+	width: 310px;
+	text-align: center;
+}
+
+#search_show_button {
+	cursor: pointer;
+	width: 100%;
+	text-align: right;
+}
+
+#search_form_container {
+	display: none;
+	background: #ccc;
+}
