--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,5 +6,7 @@
  *= require_tree . 
  *= require formtastic
  *= require vendor
+ *= require jquery.countdown
+ *= require id_countdown
  *= require jquery.megamenu
 */
