--- a/app/assets/javascripts/id_countdown.js.erb
+++ b/app/assets/javascripts/id_countdown.js.erb
@@ -1,26 +1,28 @@
 
-<% if defined?(@event) != nil %>
+
 $(function(){	
-	var abr = $("#time-abr"),time = $("#time"),ts = new Date(<%= @event['end'].strftime("%Y") %>,<%= @event['end'].strftime("%m") %>,<%= @event['end'].strftime("%d") %>),i=0;    						
-	time.countdown({
-			timestamp: ts
-		});
-	var days = time.find(".countDays:first"),
-		hours = time.find(".countHours:first"),
-		minutes = time.find(".countMinutes:first"),
-		__ = function(arr,text){
-			arr.push(text);
-		},html = new Array;
-	__(html,'<span class="tag">');
-		__(html,'TAG');
-	__(html,'</span>');
-	__(html,'<span class="stunden">');
-		__(html,'STUNDEN');
-	__(html,'</span>');
-	__(html,'<span class="minuten">');
-		__(html,'MINUTEN');
-	__(html,'</span>');
-	abr.append(html.join(''));
+	if( typeof(theEvent) !== 'undefined' ){
+		var abr = $("#time-abr"),time = $("#time"),ts = new Date(theEvent['end']['year'],theEvent['end']['month'],theEvent['end']['day'],theEvent['end']['hour'],theEvent['end']['minute'],theEvent['end']['second']),i=0;    						
+		time.countdown({
+				timestamp: ts
+			});
+		var days = time.find(".countDays:first"),
+			hours = time.find(".countHours:first"),
+			minutes = time.find(".countMinutes:first"),
+			__ = function(arr,text){
+				arr.push(text);
+			},html = new Array;
+		__(html,'<span class="tag">');
+			__(html,'TAG');
+		__(html,'</span>');
+		__(html,'<span class="stunden">');
+			__(html,'STUNDEN');
+		__(html,'</span>');
+		__(html,'<span class="minuten">');
+			__(html,'MINUTEN');
+		__(html,'</span>');
+		abr.append(html.join(''));
+	}
 });
 
-<% end %>
+
