--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -21,15 +21,29 @@
 </p>
 
 <p>
-	<% if (defined?(@event) != nil) %>
 	<div id="countdown">
   	<div id="time"></div>
   	<div id="time-abr" class="time-abr"></div>
   </div>
-  <% end %>
+</p>
+
+<p>
+	<a href="/<%= locale %>/events/exportICS/event/<%= @event.id %>">Export Calendar File</a>
 </p>
 
 <div id='map'></div>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
+<script>
+	var theEvent = {
+		end: { 
+		 year: <%= @event.end.strftime("%Y") %>,
+		 month: <%= @event.end.strftime("%m").to_i-1 %>,
+		 day: <%= @event.end.strftime("%d") %>,
+		 hour: <%= @event.end.strftime("%H") %>,
+		 minute: <%= @event.end.strftime("%M") %>,
+		 second: <%= @event.end.strftime("%S") %>
+		}
+	};
+</script>
