now using ruby 1.9.2; .rvmrc file changed too. pdf generating for event pages.

--- a/app/views/events/category.html.erb
+++ b/app/views/events/category.html.erb
@@ -37,3 +37,5 @@
 
 <% end %>
 
+<br />
+<%= link_to 'Download PDF', category_events_path(:cat => params[:cat], :page => params[:page], :format => 'pdf') %>
