--- a/app/views/events/day.html.erb
+++ b/app/views/events/day.html.erb
@@ -27,3 +27,5 @@
 
 <% end %>
 
+<br />
+<%= link_to 'Download PDF', day_events_path(:date => params[:date], :menu_item => params[:menu_item], :format => 'pdf') %>
