--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,3 +24,6 @@
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
+
+<br />
+<%= link_to 'Download PDF', event_path(@event, :format => 'pdf') %>
