--- a/app/views/events/_day.html.erb
+++ b/app/views/events/_day.html.erb
@@ -1,3 +1,5 @@
+<% is_html = ((defined? html) && html) ? true : false %>
+
 <% title "Events on #{params[:date]}" %>
 
 <% if @events.length == 0 %>
@@ -7,6 +9,9 @@
 
 	<table>
 	  <tr>
+	    <% if is_html %>
+			<th>View Details</th>
+	    <% end %>
 			<th>Time</th>
 	    <th>Title</th>
 	    <th>Description</th>
@@ -14,6 +19,9 @@
 	
 	<% @events.each do |event| %>
 	  <tr>
+	    <% if is_html %>
+	      <td><%= link_to 'More', event %></td>
+	    <% end %>
 	    <td><%= format_time(event.start) %> - <%= format_time(event.end) %></td>
 	    <td><%= event.title %></td>
 	    <td><%= truncate(event.description, :length => 100) %></td>
@@ -24,4 +32,3 @@
 	<%= will_paginate @events %>
 
 <% end %>
-
