--- a/app/views/events/_index.html.erb
+++ b/app/views/events/_index.html.erb
@@ -1,34 +1,33 @@
 <% is_html = ((defined? html) && html) ? true : false %>
 
-<% title 'Listing events' %>
-
-<table>
-  <tr>
-		<th>Time</th>
-    <th>Title</th>
-    <th>Description</th>
-    <% if is_html %>
-      <th></th>
-      <th></th>
-      <th></th>
+<h1>Events</h1>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Start</th>
+      <th>Created at</th>
+      <% if is_html %>
+        <th>Actions</th>
+      <% end %>
+    </tr>
+  </thead>
+  <tbody>
+    <% @events.each do |event| %>
+      <tr>
+        <td><%= event.id %></td>
+        <td><%= link_to event.start, event_path(event) %></td>
+        <td><%= event.created_at %></td>
+	<% if is_html %>
+          <td>
+            <%= link_to 'Edit', edit_event_path(event), :class => 'btn btn-mini' %>
+            <%= link_to 'Destroy', event_path(event), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+	<% end %>
+        </td>
+      </tr>
     <% end %>
-  </tr>
-
-<% @events.each do |event| %>
-  <tr>
-    <td><%= format_time(event.start) %> - <%= format_time(event.end) %></td>
-    <td><%= event.title %></td>
-    <td><%= truncate(event.description, :length => 100) %></td>
-    <% if is_html %>
-      <td><%= link_to 'Show', event %></td>
-      <td><%= link_to 'Edit', edit_event_path(event) %></td>
-      <td><%= link_to 'Destroy', event, :confirm => 'Are you sure?', :method => :delete %></td>
-    <% end %>
-  </tr>
-<% end %>
+  </tbody>
 </table>
-
-<br />
 
 <% if is_html %>
   <%= link_to 'New Event', new_event_path %>
