--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,1 @@
-<% title 'Editing event' %>
-
-<%= multi_language_form 'form' %>
-
-<%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
+<%= render :partial => 'form' %>
