--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,1 @@
-<% title 'New event' %>
-
-<%= multi_language_form 'form' %>
-
-<%= link_to 'Back', events_path %>
+<%= render :partial => 'form' %>
