--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,1 +1,5 @@
-<%= render :partial => 'form' %>
+<% title 'New event' %>
+
+<%= multi_language_form 'form' %>
+
+<%= link_to 'Back', events_path %>
