--- a/app/views/german_week/search.html.erb
+++ b/app/views/german_week/search.html.erb
@@ -1,6 +1,6 @@
 <% title "Search" %>
 
-<%= render 'german_week/search' %>
+<%= render 'german_week/search_form' %>
 
 <div style="margin-bottom: 20px;">
   <% @categories.each do |category| %>
@@ -23,28 +23,8 @@
 		<p>0 results found.</p>
 	<% end %>
 <% else %>
-  <table class="table table-striped">
-   <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Start</th>
-      <th>End</th>
-      <th></th>
-    </tr>
-   </thead>
 
- <tbody>
-  <% @events.each do |event| %>
-    <tr>
-      <td><%= link_to event.title, event_path(event) %></td>
-      <td><%= event.description %></td>
-      <td><%= format_datetime(event.start) %></td>
-      <td><%= format_datetime(event.end) %></td>
-    </tr>
-  <% end %>
- </tbody>
-  </table>
+    <%= render 'german_week/search_results', :is_html => true %>
 
   
 	<%# will_paginate @events %>
