--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 <div id="search_button_and_form">
   <div id="search_form_container">
-    <%= render 'german_week/search' %>
+    <%= render 'german_week/search_form' %>
   </div>
   <div id="search_show_button">
     search
