--- a/app/assets/stylesheets/map_page.css
+++ b/app/assets/stylesheets/map_page.css
@@ -2,7 +2,7 @@
 	background-color:#CCC;
 }
 
-.map_page li:first{	
+.map_page li:first {	
 	color:#FFF;
 	font-size:15px;
 	margin-top:8px;
@@ -14,4 +14,19 @@
 #map_map_page {
 	width:100%;
 	height:500px;
+}
+
+#map_container {
+	position:relative;
+}
+
+.select-events {
+	background-color: #888;
+	border-top: 1px solid #888;
+	border-bottom: 1px solid #666;
+	margin: 0px auto;
+	padding: 5px 10px;
+	font-family:arial;
+	font-size:15px;
+	color:#FFF;
 }
