--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,18 +1,31 @@
-	<ul class="megamenu map_page">
-		<li>Please select day:</li>
-		<% (1..6).each do |i| %>
-			<li>
-				<%= 	link_to "#{i+13} #{t('date.day_names').to_a[i]}", 
-							day_events_path(:date => "2012-05-#{i+13}", :menu_item => i),
-							:class => "event_menu_day_link" %>					
-						<!--<div id='<%="event_menu_popup#{i}"%>' style="width: 100%;" class="event_menu_popup">
-							<ul><%= render("shared/menu_item", :collection => @events) || '<li class="event_menu_popup_item">Loading...</li>' %></ul>
-							<div class="clearfix"></div>
-						</div>-->
-			</li>
-		<% end %>
-	</ul>
-	
-	<div id="map_map_page"></div>
+	<div class="select-events">
+		<br />
+		<form>
+			Please select day: &nbsp;
+			<select id="event-day">
+				<option></option>
+				<% (1..6).each do |i| %>
+					<option value="<%= "2012-05-#{i+13}" %>" 
+						<% if params[:dayorcategory] == "2012-05-#{i+13}" %>
+						<%= "selected=\"selected\"" %>
+						<% end %>><%= "#{i+13} #{t('date.day_names').to_a[i]}" %></option>
+				<% end %>
+			</select>
+			&nbsp;&nbsp;
+			Please select category: &nbsp;
+			<select id="event-category">
+				<option></option>
+				<% @categories.each do |category| %>
+					<option value="<%= "#{category.title}" %>"
+						<% if params[:dayorcategory] == "#{category.title}" %>
+						<%= "selected=\"selected\"" %>
+						<% end %>><%= "#{category.title}" %></option>
+				<% end %>
+			</select>
+		</form>
+	</div>
+	<div id="map_container">
+		<div id="map_map_page"></div>
+	</div>
 	
 	
