--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -6,7 +6,7 @@
 				<option></option>
 				<% (1..6).each do |i| %>
 					<option value="<%= "2012-05-#{i+13}" %>" 
-						<% if params[:dayorcategory] == "2012-05-#{i+13}" %>
+						<% if params[:dayorcategory] == "2012-05-#{i+13}" || params[:day] == "2012-05-#{i+13}" %>
 						<%= "selected=\"selected\"" %>
 						<% end %>><%= "#{i+13} #{t('date.day_names').to_a[i]}" %></option>
 				<% end %>
