--- a/app/views/events/_index.html.erb
+++ b/app/views/events/_index.html.erb
@@ -23,7 +23,9 @@
 	<% if is_html %>
           <td>
             <%= link_to 'Edit', edit_event_path(event), :class => 'btn btn-mini' %>
-            <%= link_to 'Destroy', event_path(event), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+	    <% if user_signed_in? %>
+	      <%= link_to 'Destroy', event_path(event), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+	    <% end %>
 	<% end %>
         </td>
       </tr>
