--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -41,6 +41,8 @@
   <div class="form-actions">
     <%= link_to 'Back', events_path, :class => 'btn'  %>
     <%= link_to 'Edit', edit_event_path(@event), :class => 'btn' %>
-    <%= link_to 'Delete', event_path(@event), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+    <% if user_signed_in? %>
+      <%= link_to 'Delete', event_path(@event), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+    <% end %>
   </div>
 <% end %>
