--- a/app/views/german_week/_search_form.html.erb
+++ b/app/views/german_week/_search_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag search_path, :method => 'get' do %>
   <p style="margin: 0px;">
     <%= text_field_tag :search, params[:search] %>
-    <%= select_tag :search_in, options_for_select([['all','all']] + @categories.map {|c| [c.title, c.id]}, params[:search_in]) %>
+    <%= select_tag :category, options_for_select([['all','all']] + @categories.map {|c| [c.title, c.title]}, params[:category]) %>
     <%= submit_tag "Search", :name => nil %>
   </p>
 <% end %>
