edit and delete button removed for events, sponsors, categories (if user is not signed in)

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,8 +11,10 @@
       <tr>
         <td><%= link_to category.title, category %></td>
         <td>
-          <%= link_to 'Edit', edit_category_path(category), :class => 'btn btn-mini' %>
-          <%= link_to 'Destroy', category_path(category), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+	  <% if user_signed_in? %>
+            <%= link_to 'Edit', edit_category_path(category), :class => 'btn btn-mini' %>
+            <%= link_to 'Destroy', category_path(category), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+	  <% end %>
         </td>
       </tr>
     <% end %>
