--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,6 +2,8 @@
 
 <div class="form-actions">
   <%= link_to 'Back', categories_path, :class => 'btn'  %>
-  <%= link_to 'Edit', edit_category_path(@category), :class => 'btn' %>
-  <%= link_to 'Delete', category_path(@category), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+  <% if user_signed_in? %>
+    <%= link_to 'Edit', edit_category_path(@category), :class => 'btn' %>
+    <%= link_to 'Delete', category_path(@category), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+  <% end %>
 </div>
