add menu and category to the menu; category pop-up menu still needs to be created

--- a/app/views/events/_category.html.erb
+++ b/app/views/events/_category.html.erb
@@ -1,6 +1,6 @@
 <% is_html = ((defined? html) && html) ? true : false %>
 
-<% title "#{params[:cat]} Events" %>
+<% title "Events by Category" %>
 
 <% if is_html && @categories.count > 0 %>
 	<%= form_tag "/#{I18n.locale}/events/category", :method => :get, :html => { :class => 'form-horizontal' } do -%>
