--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,3 +10,58 @@
 */
 
 
+/* Multi language tabs*/
+ul.select-form-language { 
+	list-style: none;
+	padding: 10px 10px 10px 0px;
+	margin-bottom: 0;
+}
+ul.select-form-language li { 
+	display: inline; 
+	padding:10px; 
+	border-top-left-radius: 8px; 
+	border-top-right-radius: 8px;
+}
+ul.select-form-language li a{ 
+	margin: -10px;
+	padding:10px; 
+}
+div.multilanguage {
+	border-radius: 8px; 
+	padding-left: 10px;
+}
+
+ul.select-form-language li#tab-de { 
+	background-color:#DDD;
+	color:#eee;
+}
+div#form-de { 
+	background-color:#DDD;
+}
+
+ul.select-form-language li#tab-en { 
+	background-color:#bbb;
+	color:#eee;
+}
+div#form-en { 
+	background-color:#bbb;
+}
+
+ul.select-form-language li#tab-ka { 
+	background-color:#999;
+	color:#eee;
+}
+div#form-ka { 
+	background-color:#999;
+}
+
+.hidden { display: none; }
+
+
+abbr {
+	padding-left:5px;
+	color:#A00;
+	font-weight:bold;
+	font-size:125%;
+}
+
